# octyn_engine

./: .env  app.py  pyproject.toml
core/: config.py
db/: postgres.py
tcp/: client.py  cyclic.py  server.py  state.py
tui/: app.py  layout.py
