[project]
name = "octyn-engine-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "textual>=7.2.0",
    "uvicorn>=0.40.0",
]
